# practice-nginx

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml  readme.md
main/: Dockerfile  nginx.conf
main/app/: init.py
main/app/application/adapters/files/: base.py  files.py
main/app/application/api/: main.py
main/app/application/api/files/: decorators.py  handlers.py  schemas.py
main/app/domain/exceptions/: __init__.py
main/app/domain/files/: files.py
main/app/repositories/files/: base.py  memory.py
main/app/services/exceptions/: base.py  files.py
main/app/services/files/: base.py  converters.py  files.py  utils.py
main/app/settings/: config.py
proxy/: Dockerfile  nginx.conf  proxy_handler.py
uploads/: Почитать.txt
