[tool.poetry]
name = "nginx-project"
version = "0.1.0"
description = ""
authors = ["Sergey <one6sergey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.6.1"
fastapi = "^0.112.1"
punq = "^0.7.0"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
